k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-cd-pipeline
  namespace: python-ci-cd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ci-cd-pipeline
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: ci-cd-pipeline
    spec:
      containers:
      - name: ci-cd-pipeline-app
        image: lordemmag/ci-cd-pipeline:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
