k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: CI-CD-Pipeline
  namespace: python-demo
spec:
  selector:
    app: CI-CD-Pipeline
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
