k8s/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: CI-CD-Pipeline
  namespace: python-CI-CD
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: python-CI-CD.lordemmag.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: CI-CD-Pipeline
            port:
              number: 80
